--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "./index.js",
   "typings": "./index.d.ts",
   "scripts": {
-    "start": "concurrently --raw \"webpack-dev-server --open\" \"npm run test:watch\"",
+    "start": "concurrently --raw \"webpack-dev-server --open\"",
+    "start-test": "concurrently --raw \"webpack-dev-server --open\" \"npm run test:watch\"",
     "build:demo": "webpack -p",
     "build:umd": "webpack --config webpack.config.umd.ts",
     "build:ngc": "ngc -p tsconfig-ngc.json",
@@ -22,7 +23,7 @@
     "prerelease": "npm test",
     "release:git": "git add package.json && git commit -m 'chore: bump version number' && standard-version --first-release && git push --follow-tags origin master",
     "release:npm": "npm run build:dist && npm run copyfiles && cd dist/;npm publish",
-    "release":"npm run release:git && npm run release:npm",
+    "release": "npm run release:git && npm run release:npm",
     "postrelease": "npm run build:clean && npm run gh-pages",
     "commitmsg": "validate-commit-msg",
     "codecov": "cat coverage/lcov.info | codecov"
@@ -55,6 +56,7 @@
     "@types/sinon": "^1.16.27",
     "@types/sinon-chai": "^2.7.26",
     "@types/webpack": "^2.2.8",
+    "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.0.8",
     "chai": "^3.5.0",
     "codecov-lite": "^0.1.3",
@@ -65,7 +67,11 @@
     "conventional-changelog": "^1.1.0",
     "conventional-changelog-cli": "^1.2.0",
     "core-js": "^2.4.1",
+    "css-loader": "^0.27.3",
     "cz-conventional-changelog": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "holderjs": "^2.9.4",
+    "html-loader": "^0.4.5",
     "husky": "^0.13.0",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^2.0.0",
@@ -76,17 +82,21 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
+    "node-sass": "^4.5.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
     "rxjs": "^5.0.1",
+    "sass-loader": "^6.0.3",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "standard-version": "^4.0.0",
+    "style-loader": "^0.14.1",
     "ts-node": "^2.0.0",
     "tslint": "^4.0.2",
     "tslint-loader": "^3.3.0",
     "typescript": "~2.0.3",
     "validate-commit-msg": "^2.8.0",
-    "webpack": "^2.2.0",
+    "webpack": "^2.2.1",
     "webpack-angular-externals": "^1.0.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-rxjs-externals": "^1.0.0",
@@ -99,5 +109,9 @@
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "angular2-moment": "^1.3.1",
+    "scrollmonitor": "^1.2.3"
   }
 }
