--- a/tsconfig-ngc.json
+++ b/tsconfig-ngc.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
@@ -19,7 +19,7 @@
   "angularCompilerOptions": {
     "strictMetadataEmit": true,
     "genDir": "./dist/",
-    "skipTemplateCodegen": true,
+    "skipTemplateCodegen": false,
     "debug": true
   }
 }
