--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:watch": "karma start --auto-watch",
     "commit": "git-cz",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "compodoc": "compodoc -p tsconfig-compodoc.json -d docs -b /ng-messenger/docs/ --disableGraph --disableCoverage --disablePrivateOrInternalSupport",
-    "gh-pages": "git checkout gh-pages && git merge master --no-edit --no-ff && npm run build:demo && npm run compodoc && git add . && git commit -m 'chore: build demo and docs' && git push && git checkout master",
+    "compodoc": "compodoc -p tsconfig-compodoc.json -d docs ./docs/ --disableGraph --disableCoverage --disablePrivateOrInternalSupport",
+    "gh-pages": "npm run build:demo && npm run compodoc",
     "copyfiles": "cp package.json LICENSE README.md CHANGELOG.md dist/",
     "prerelease": "npm test",
     "release:git": "git add package.json && git commit -m 'chore: bump version number' && standard-version --first-release && git push --follow-tags origin master",
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dreebit/ng-messenger.git"
+    "url": "git+https://github.com/tonimoeckel/ng-messenger.git"
   },
   "keywords": [
     "angular2",
@@ -39,9 +39,9 @@
   "author": "Toni Möckel",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dreebit/ng-messenger/issues"
+    "url": "https://github.com/tonimoeckel/ng-messenger/issues"
   },
-  "homepage": "https://github.com/dreebit/ng-messenger#readme",
+  "homepage": "https://github.com/tonimoeckel/ng-messenger#readme",
   "devDependencies": {
     "@angular/common": "^2.1.0",
     "@angular/compiler": "^2.1.0",
