--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "^2.5.0",
     "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^0.3.0",
     "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
