--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
   },
   "dependencies": {
     "angular2-moment": "^1.3.1",
+    "angular2-virtual-scroll": "^0.1.3",
     "scrollmonitor": "^1.2.3"
   }
 }
