--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-messenger",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "description": "Messaging components",
   "main": "./bundles/ng-messenger.umd.js",
   "module": "./index.js",
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/tonimoeckel/ng-messenger#readme",
   "devDependencies": {
     "@angular/common": "^2.1.0",
+    "@angular/forms": "^2.1.0",
     "@angular/compiler": "^2.1.0",
     "@angular/compiler-cli": "^2.1.0",
     "@angular/core": "^2.1.0",
@@ -114,7 +115,6 @@
   },
   "dependencies": {
     "angular2-moment": "^1.3.1",
-    "angular2-virtual-scroll": "^0.1.3",
-    "scrollmonitor": "^1.2.3"
+    "angular2-virtual-scroll": "^0.1.3"
   }
 }
