--- a/tsconfig-ngc.json
+++ b/tsconfig-ngc.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "inlineSources": true,
     "types": [],
-    "lib": ["es6", "dom"]
+    "lib": ["es2015", "dom"]
   },
   "files": [
     "src/index.ts"
@@ -19,7 +19,7 @@
   "angularCompilerOptions": {
     "strictMetadataEmit": true,
     "genDir": "./dist/",
-    "skipTemplateCodegen": false,
+    "skipTemplateCodegen": true,
     "debug": true
   }
 }
