--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "es2015",
+    "target": "ES5",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -9,7 +9,7 @@
     "removeComments": false,
     "noImplicitAny": false,
     "lib": [
-      "es2016",
+      "es2015",
       "dom"
     ]
   },
