--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
   },
   "dependencies": {
     "angular2-moment": "^1.3.1",
-    "angular2-virtual-scroll": "^0.1.3"
+    "angular2-virtual-scroll": "^0.1.3",
+    "ng2-vs-for": "^1.1.1"
   }
 }
