--- a/package.json
+++ b/package.json
@@ -44,21 +44,24 @@
   "homepage": "https://github.com/tonimoeckel/ng-messenger#readme",
   "devDependencies": {
     "@angular/common": "^2.1.0",
-    "@angular/forms": "^2.1.0",
     "@angular/compiler": "^2.1.0",
     "@angular/compiler-cli": "^2.1.0",
     "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@types/chai": "^3.4.30",
     "@types/core-js": "^0.9.32",
     "@types/jasmine": "2.2.33",
     "@types/node": "7.0.0",
+    "@types/react": "^15.0.21",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-virtualized": "^9.4.0",
     "@types/sinon": "^1.16.27",
     "@types/sinon-chai": "^2.7.26",
     "@types/webpack": "^2.2.8",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.0.8",
+    "awesome-typescript-loader": "^3.1.2",
     "chai": "^3.5.0",
     "codecov-lite": "^0.1.3",
     "codelyzer": "^2.0.0",
@@ -94,6 +97,7 @@
     "sinon-chai": "^2.8.0",
     "standard-version": "^4.0.0",
     "style-loader": "^0.14.1",
+    "ts-loader": "^2.0.3",
     "ts-node": "^2.0.0",
     "tslint": "^4.0.2",
     "tslint-loader": "^3.3.0",
@@ -116,6 +120,9 @@
   "dependencies": {
     "angular2-moment": "^1.3.1",
     "angular2-virtual-scroll": "^0.1.3",
-    "ng2-vs-for": "^1.1.1"
+    "ng2-vs-for": "^1.1.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3",
+    "react-virtualized": "^9.7.2"
   }
 }
