--- a/package.json
+++ b/package.json
@@ -30,18 +30,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tonimoeckel/ng-messenger.git"
+    "url": "git+https://github.com/dreebit/ng-messenger.git"
   },
   "keywords": [
     "angular2",
-    "angular"
+    "angular",
+    "ng",
+    "ng2",
+    "ngx",
+    "messenger",
+    "component"
   ],
-  "author": "Toni Möckel",
+  "author": "DREEBIT GmbH",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tonimoeckel/ng-messenger/issues"
+    "url": "https://github.com/dreebit/ng-messenger/issues"
   },
-  "homepage": "https://github.com/tonimoeckel/ng-messenger#readme",
+  "homepage": "https://github.com/dreebit/ng-messenger#readme",
   "devDependencies": {
     "@angular/common": "^2.1.0",
     "@angular/compiler": "^2.1.0",
@@ -54,9 +59,6 @@
     "@types/core-js": "^0.9.32",
     "@types/jasmine": "2.2.33",
     "@types/node": "7.0.0",
-    "@types/react": "^15.0.21",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-virtualized": "^9.4.0",
     "@types/sinon": "^1.16.27",
     "@types/sinon-chai": "^2.7.26",
     "@types/webpack": "^2.2.8",
@@ -120,9 +122,6 @@
   "dependencies": {
     "angular2-moment": "^1.3.1",
     "angular2-virtual-scroll": "^0.1.3",
-    "ng2-vs-for": "^1.1.1",
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
-    "react-virtualized": "^9.7.2"
+    "ng2-vs-for": "^1.1.1"
   }
 }
